--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="">Contact us</a></li>
     </ul>
     <button class="nav-btn"><a href="#">Get started <i class="fa-solid fa-arrow-up-right"></i></a></button>
-    <img src="image/menu.png" alt="" class="menu" onclick="toggleMenu()">
+    <img src="image/menu.png" alt="logo" class="menu" onclick="toggleMenu()">
   </nav>
   <div class="hero">
     <div class="left">
