--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     
-    <a href="#"><img src="./image/logo2.png" alt="logo" class="logo"></a>
+    <a href="#"><img src="logo2.png" alt="logo" class="logo"></a>
     <ul id="menu-link">
         <li><a href="">Home</a></li>
         <li><a href="">Course</a></li>
@@ -20,14 +20,14 @@
         <li><a href="">Contact us</a></li>
     </ul>
     <button class="nav-btn"><a href="#">Get started <i class="fa-solid fa-arrow-up-right"></i></a></button>
-    <img src="image/menu.png" alt="logo" class="menu" onclick="toggleMenu()">
+    <img src="menu.png" alt="logo" class="menu" onclick="toggleMenu()">
   </nav>
   <div class="hero">
     <div class="left">
       <h1><span>Welcome to</span><br><span>SSV CAREER</span></h1>
     </div>
     <div class="right">
-      <img src="image/girl.png" alt="" class="girl-img">
+      <img src="girl.png" alt="" class="girl-img">
     </div>
   </div>
 
